--- a/package.json
+++ b/package.json
@@ -10,15 +10,13 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
-    "@react-navigation/native": "^6.1.17",
-    "@react-navigation/stack": "^6.3.29",
     "expo": "~51.0.8",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.74.1",
-    "react-native-web": "~0.19.10"
+    "react-router-native": "^6.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
