--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.74.1",
+    "react-native-paper": "^5.12.3",
+    "react-native-safe-area-context": "^4.10.1",
     "react-router-native": "^6.23.1"
   },
   "devDependencies": {
