--- a/backend/package.json
+++ b/backend/package.json
@@ -7,5 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "mongoose": "^8.4.0",
+    "moongoose": "^0.0.5"
+  }
 }
