--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,21 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
+    "@react-native-community/datetimepicker": "^8.0.1",
+    "@react-native-firebase/app": "^20.0.0",
     "expo": "~51.0.8",
+    "expo-dev-client": "~4.0.14",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^10.12.1",
     "formik": "^2.4.6",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.74.1",
+    "react-native-date-picker": "^5.0.2",
+    "react-native-element-dropdown": "^2.12.0",
     "react-native-paper": "^5.12.3",
+    "react-native-paper-dates": "^0.22.10",
     "react-native-safe-area-context": "^4.10.1",
     "react-router-native": "^6.23.1"
   },
