--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@expo/metro-runtime": "~3.2.1",
     "@react-native-community/datetimepicker": "^8.0.1",
     "@react-native-firebase/app": "^20.0.0",
+    "axios": "^1.7.2",
     "expo": "~51.0.8",
     "expo-dev-client": "~4.0.14",
     "expo-status-bar": "~1.12.1",
